force-app/main/default/objects/clcommon__DAG_Logging__c/clcommon__DAG_Logging__c.object-meta.xml
<CustomObject>
    <label>DAG Logging</label>
    <nameField>
        <displayFormat>DL-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DAG Logging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>