force-app/main/default/objects/clcommon__DAG_Logging__c/fields/clcommon__DAG__c.field-meta.xml
<CustomField>
    <fullName>clcommon__DAG__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DAG</label>
    <referenceTo>clcommon__DAG_Schedule__c</referenceTo>
    <relationshipLabel>DAG Loggings</relationshipLabel>
    <relationshipName>DAG_Loggings</relationshipName>
    <type>Lookup</type>
</CustomField>