force-app/main/default/objects/clcommon__DAG_Logging__c/fields/clcommon__Finish_Time__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Finish_Time__c</fullName>
    <label>Finish Time</label>
    <type>DateTime</type>
</CustomField>