force-app/main/default/objects/clcommon__DAG_Logging__c/fields/clcommon__Log__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Log__c</fullName>
    <description>Information on succeeded/failed/aborted jobs, if the dag failed</description>
    <label>Log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>