force-app/main/default/objects/clcommon__DAG_Logging__c/fields/clcommon__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>clcommon__Start_Time__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>