force-app/main/default/objects/clcommon__DAG_Logging__c/fields/DAG_Name__c.field-meta.xml
<CustomField>
    <fullName>DAG_Name__c</fullName>
    <formula>clcommon__DAG__r.clcommon__DAG_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DAG Name</label>
    <type>Text</type>
</CustomField>